<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="hello">Hello World, MainActivity!</string>
    <string name="app_name">KLSL.SP.Pad</string>
    <string name="AnswerSubjects">得分登记</string>
    <string name="ShopScoreSearch">得分查询</string>
    <string name="Search">查询</string>
    <string name="CurrentScore">本期得分</string>
    <string name="Img">图片</string>
    <string name="AnswerStart">添加单据</string>
    <string name="Previous">上一个</string>
    <string name="Next">保存</string>
    <string name="Save">保存</string>
    <string name="NextAndSave">下一个(保存)</string>
    <string name="Photo">拍照</string>
    <string name="ShopCode">经销商代码</string>
    <string name="ShopName">经销商名称</string>
    <string name="Confirm">确认</string>
    <string name="Lookup">查看</string>
    
    <string name="txtProject">项目</string>
    <string name="txtDistributor">经销商</string>
    <string name="chkLostScore">失分说明</string>
    <string name="chkLostScore2">失分说明+复核</string>
    <string name="colNO">序号</string>
    <string name="colSubjectCode">题号</string>
    <string name="colOrderNO">执行序号</string>
    <string name="colCheckPoint">检查点</string>
    <string name="colScore">分数</string>
    
    <string name="lblscoringCriteria">评分标准</string>
    <string name="lblscoreElements">评分要素</string>
    <string name="lblImageTitle">标准照片</string>
    <string name="btnDetail">详细</string>
    <string name="LastScore">上期得分</string>
    <string name="Remark">失分说明</string>
    <string name="Select">选择</string>
    
    <string name="UserName">用户名</string>
    <string name="UserPwd">密    码</string>
    <string name="UserLogin">登    陆</string>
    <string name="UserNameError">用户名不存在！</string>
    <string name="UserPwdError">密码不正确！</string>
    
    <string name="SyncData">本地更新Master数据</string>
    <string name="SyncDataWS">网络更新Master数据</string>
    <string name="Test">测试</string>
    
    <string name="txtSuoPeiType">索赔类型</string>
</resources>