<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:gravity="fill_vertical" >

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" >

        <View style="@style/list_horizontal_layout" />

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:background="#1788D8"
            android:descendantFocusability="blocksDescendants"
            android:orientation="horizontal"
            android:padding="0dp" >

            <View style="@style/list_vertical_layout" />

            <TextView
                android:id="@+id/btnDetailHead"
                android:layout_width="106dp"
                android:layout_height="wrap_content"
                android:focusable="false"
                android:gravity="center_vertical|center_horizontal"
                android:padding="10dp"
                android:text="@string/AnswerSubjects"
                android:textColor="#000000"
                android:textSize="16dp" />
            
            <View style="@style/list_vertical_layout" />

            <TextView
                android:id="@+id/colNOHead"
                android:layout_width="60dp"
                android:layout_height="wrap_content"
                android:gravity="center_vertical|center_horizontal"
                android:padding="10dp"
                android:text="@string/colNO"
                android:textColor="#000000"
                android:textSize="16dp" />

            <View style="@style/list_vertical_layout" />

            <TextView
                android:id="@+id/subjectCodeHead"
                android:layout_width="80dp"
                android:layout_height="wrap_content"
                android:gravity="center_vertical|center_horizontal"
                android:padding="10dp"
                android:text="@string/colSubjectCode"
                android:textColor="#000000"
                android:textSize="16dp" />

            <View style="@style/list_vertical_layout" />

            <TextView
                android:id="@+id/orderNOHead"
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:gravity="center_vertical|center_horizontal"
                android:padding="10dp"
                android:text="@string/colOrderNO"
                android:textColor="#000000"
                android:textSize="16dp" />

            <View style="@style/list_vertical_layout" />

            <TextView
                android:id="@+id/checkPointHead"
                android:layout_width="212dp"
                android:layout_height="wrap_content"
                android:gravity="center_vertical|center_horizontal"
                android:padding="10dp"
                android:text="@string/colCheckPoint"
                android:textColor="#000000"
                android:textSize="16dp" />

            <View style="@style/list_vertical_layout" />

            <TextView
                android:id="@+id/ScoreHead"
                android:layout_width="80dp"
                android:layout_height="wrap_content"
                android:gravity="center_vertical|center_horizontal"
                android:padding="10dp"
                android:text="@string/colScore"
                android:textColor="#000000"
                android:textSize="16dp" />

            <View style="@style/list_vertical_layout" />
            
            <!-- android:singleLine="true" 设置显示超出用省略号 -->
        </LinearLayout>

        <View style="@style/list_horizontal_layout" />
    </LinearLayout>

</RelativeLayout>