<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:fillViewport="true" >

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="5dp" >

        <FrameLayout
		    android:layout_width="fill_parent"
		    android:layout_height="wrap_content"
		    android:background="@drawable/border_round" >
		    
             <TextView
                android:id="@+id/textViewBefore"
                android:layout_width="400dp"
                android:layout_height="90dp"
                android:gravity="center_vertical|center_horizontal"
                android:layout_gravity="left"
                android:text="上一题"
                android:textAppearance="?android:attr/textAppearanceLarge" />
            
             <TextView
                android:id="@+id/textViewCurrent"
                android:layout_width="400dp"
                android:layout_height="90dp"
                android:gravity="center_vertical|center_horizontal"
                android:layout_gravity="center"
                android:text="当前题目"
                android:textAppearance="?android:attr/textAppearanceLarge" />
             
              <TextView
                android:id="@+id/textViewAfter"
                android:layout_width="400dp"
                android:layout_height="90dp"
                android:gravity="center_vertical|center_horizontal"
                android:text="下一题目"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:layout_gravity="right" />
            
		</FrameLayout>
        
        
        
        <LinearLayout
            android:id="@+id/LinearLayout1"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:background="@drawable/border_round"
            android:gravity="center_vertical" >

            <TextView
                android:id="@+id/textView1"
                android:layout_width="80dp"
                android:layout_height="wrap_content"
                android:gravity="center_vertical|center_horizontal"
                android:text="@string/txtProject"
                android:textAppearance="?android:attr/textAppearanceLarge" />

            <Spinner
                android:id="@+id/cboProjects"
                style="@style/SpinnerStyle"
                android:layout_width="150dp"
                android:layout_height="wrap_content" />

            <TextView
                android:id="@+id/textView2"
                android:layout_width="80dp"
                android:layout_height="wrap_content"
                android:gravity="center_vertical|center_horizontal"
                android:text="@string/txtDistributor"
                android:textAppearance="?android:attr/textAppearanceLarge" />

            <EditText
                android:id="@+id/txtShopCode"
                android:layout_width="170dp"
                android:layout_height="60dp"
                android:ems="10"
                android:inputType="number" />

            <Button
                android:id="@+id/btnShop"
                style="@style/SearchButtonStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <EditText
                android:id="@+id/txtShopName"
                android:layout_width="350dp"
                android:layout_height="60dp"
                android:ems="10"
                android:enabled="false" />

            <EditText
                android:id="@+id/txtSubjectTypes"
                android:layout_width="200dp"
                android:layout_height="60dp"
                android:ems="10"
                android:enabled="false" />

            <Button
                android:id="@+id/btnAnswerStart"
                style="@style/ButtonStyle"
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:text="@string/AnswerStart" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="20dp"
            android:background="@drawable/border_round"
            android:orientation="vertical" >

            <include
                android:id="@+id/head1"
                layout="@layout/listview_inspectionstandard_head" />

            <ListView
                android:id="@+id/lstInspectionStandard"
                android:layout_width="wrap_content"
                android:layout_height="170dp"
                android:cacheColorHint="#00000000"
                android:divider="@color/list_border"
                android:dividerHeight="1dip"
                android:layout_marginBottom="20dp" 
                android:scrollbars="vertical">
            </ListView>

            <include
                android:id="@+id/head2"
                layout="@layout/listview_inspectionimg_head" />

            <ListView
                android:id="@+id/lstInspectionImg"
                android:layout_width="wrap_content"
                android:layout_height="170dp"
                android:cacheColorHint="#00000000"
                android:divider="@color/list_border"
                android:dividerHeight="1dip"
                android:layout_marginBottom="20dp" >
            </ListView>
            <!-- android:layout_height="195dp" -->

            <LinearLayout
                android:id="@+id/LinearLayout2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:layout_marginBottom="10dp"
                android:layout_gravity="right" >

                <TextView
                    android:id="@+id/textView3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/CurrentScore"
                    android:textAppearance="?android:attr/textAppearanceLarge" />

                <RadioGroup
                    android:id="@+id/rdogScore"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal" >
                </RadioGroup>

                <EditText
                    android:id="@+id/txtCurrentScore"
                    android:layout_width="168dp"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:gravity="right"
                    android:inputType="number" />

                <TextView
                    android:id="@+id/textView5"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/LastScore"
                    android:textAppearance="?android:attr/textAppearanceLarge" />

                <EditText
                    android:id="@+id/txtLastScore"
                    android:layout_width="168dp"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:enabled="false"
                    android:gravity="right" />
                
                <Button
                    android:id="@+id/btnScoreSearch"
                    style="@style/ButtonStyle"
                    android:layout_width="150dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="right"
                    android:text="查询题目"
                    android:layout_marginRight="10dp" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/LinearLayout4"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:gravity="center_vertical" >

                <TextView
                    android:id="@+id/textView4"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/Remark"
                    android:textAppearance="?android:attr/textAppearanceLarge" />

                <EditText
                    android:id="@+id/txtRemark"
                    android:layout_width="900dp"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:gravity="top" />

                <Button
                    android:id="@+id/btnPrevious"
                    style="@style/ButtonStyle"
                    android:layout_width="100dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:clickable="false"
                    android:text="@string/Previous" />

                <Button
                    android:id="@+id/btnNext"
                    style="@style/ButtonStyle"
                    android:layout_width="150dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:clickable="false"
                    android:text="@string/NextAndSave" />
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>

</ScrollView>