<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:fillViewport="true" >

<RelativeLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="5dp"
    android:background="@drawable/border_round" >

    <ImageView
        android:id="@+id/imageView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:src="@drawable/bmw_logo2" />

    <RelativeLayout
        android:id="@+id/relativeLayout1"
        android:layout_width="600dp"
        android:layout_height="230dp"
        android:layout_below="@+id/imageView1"
        android:layout_centerHorizontal="true"
        android:background="@drawable/border_round" >

        <TextView
            android:id="@+id/textView1"
            android:layout_width="110dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="39dp"
            android:gravity="center_vertical|center_horizontal"
            android:text="@string/UserName"
            android:textColor="#000000"
            android:textSize="16dp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/etUserName"
            android:layout_width="450dp"
            android:layout_height="wrap_content"
            android:layout_alignBaseline="@+id/textView1"
            android:layout_alignBottom="@+id/textView1"
            android:layout_toRightOf="@+id/textView1"
            android:ems="10" >

            <requestFocus />
        </EditText>

        <TextView
            android:id="@+id/textView2"
            android:layout_width="110dp"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@+id/textView1"
            android:layout_below="@+id/etUserName"
            android:layout_marginTop="33dp"
            android:gravity="center_vertical|center_horizontal"
            android:text="@string/UserPwd"
            android:textColor="#000000"
            android:textSize="16dp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/etUserPwd"
            android:layout_width="450dp"
            android:layout_height="wrap_content"
            android:layout_alignBaseline="@+id/textView2"
            android:layout_alignBottom="@+id/textView2"
            android:layout_toRightOf="@+id/textView2"
            android:ems="10"
            android:inputType="textPassword" />

        <Button
            android:id="@+id/btnUserLogin"
            style="@style/ButtonStyle"
            android:layout_width="200dp"
            android:layout_height="60dp"
            android:layout_alignRight="@+id/etUserPwd"
            android:layout_below="@+id/etUserPwd"
            android:layout_marginTop="28dp"
            android:gravity="center_vertical|center_horizontal"
            android:text="@string/UserLogin"
            android:textColor="#000000"
            android:textSize="16dp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/textErrorInfo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBaseline="@+id/btnUserLogin"
            android:layout_alignBottom="@+id/btnUserLogin"
            android:layout_alignLeft="@+id/textView2"
            android:layout_toLeftOf="@+id/btnUserLogin"
            android:gravity="center_vertical|center_horizontal"
            android:textColor="#FF0000"
            android:textSize="16dp"
            android:textStyle="bold" />
    </RelativeLayout>

</RelativeLayout>

</ScrollView>